--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       content="width=device-width, initial-scale=1.
       0"
     />      
-    <title>DevLinks</title>
+    <title>Studio Fitness</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar.png"
-          alt="foto henrique sentado em um banco na praia, no fundo o por do sol e as ondas."
+          src="./assets/WhatsApp Image 2023-12-07 at 19.55.09.jpeg"
+          alt="nome logo empresa damaris."
         />
-        <p>@henrique._vm</p>
+        <p>@coach_damaris</p>
       </div>
 
       <div id="switch" onclick="togglemode()">
@@ -71,8 +71,8 @@
       </div>
 
       <footer>
-        𝐅𝐞𝐢𝐭𝐨 𝐩𝐞𝐥𝐨
-        <a href="https://www.instagram.com/henrique._vm">𝐡𝐞𝐧𝐫𝐢𝐪𝐮𝐞</a> 👽
+        Coach 
+        <a href="https://www.instagram.com/henrique._vm">Damaris</a> 👽
       </footer>
     </div>
 
