--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/WhatsApp Image 2023-12-07 at 19.55.09.jpeg"
+          src="./assets/avatar (1).png"
           alt="nome logo empresa damaris."
         />
         <p>@coach_damaris</p>
@@ -35,7 +35,8 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se para os D</a>
+          <a href="https://wa.me/+351912578856" target="_blank" 
+          >Entre em contato</a>
         </li>
 
         <li>
@@ -45,11 +46,11 @@
         </li>
 
         <li>
-          <a href="#">Suiça</a>
+          <a href="#">Um pouco sobre o meu trabalho</a>
         </li>
 
         <li>
-          <a href="https://lingua.com" target="_blank">Do you speak english?</a>
+          <a href="https://lingua.com" target="_blank">Valores e planos</a>
         </li>
       </ul>
       <div id="social-links">
@@ -57,7 +58,7 @@
           <ion-icon name="planet-outline"></ion-icon>
         </a>
 
-        <a href="https://www.instagram.com/henrique._vm" target="_blank">
+        <a href="https://www.instagram.com/coach_damaris/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
@@ -65,14 +66,14 @@
           <ion-icon name="musical-notes-outline"></ion-icon>
         </a>
 
-        <a href="https://twitter.com/henriyfxp" target="_blank">
-          <ion-icon name="logo-twitter"></ion-icon>
+        <a href="https://" target="_blank">
+          <ion-icon name="logo-facebook"></ion-icon>
         </a>
       </div>
 
       <footer>
         Coach 
-        <a href="https://www.instagram.com/henrique._vm">Damaris</a> 👽
+        <a href="https://www.instagram.com/coach_damaris/" target="_blank" >Damaris</a> 🏋️‍♀️
       </footer>
     </div>
 
