--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/avatar (1).png"
-          alt="nome logo empresa damaris."
+          src="./assets/avatar.png"
+          alt="henrique no banco de uma praia, com por do sol alaranjado atrás."
         />
-        <p>@coach_damaris</p>
+        <p>@henrique._vm</p>
       </div>
 
       <div id="switch" onclick="togglemode()">
@@ -35,7 +35,7 @@
 
       <ul>
         <li>
-          <a href="https://wa.me/+351912578856" target="_blank" 
+          <a href="#" target="_blank" 
           >Entre em contato</a>
         </li>
 
@@ -46,11 +46,11 @@
         </li>
 
         <li>
-          <a href="#">Um pouco sobre o meu trabalho</a>
+          <a href="#">suiça</a>
         </li>
 
         <li>
-          <a href="https://lingua.com" target="_blank">Valores e planos</a>
+        <a href="https://lingua.com" target="_blank">Do you speak english?</a>
         </li>
       </ul>
       <div id="social-links">
@@ -58,7 +58,7 @@
           <ion-icon name="planet-outline"></ion-icon>
         </a>
 
-        <a href="https://www.instagram.com/coach_damaris/" target="_blank">
+        <a href="https://www.instagram.com/henrique._vm/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
@@ -66,14 +66,14 @@
           <ion-icon name="musical-notes-outline"></ion-icon>
         </a>
 
-        <a href="https://" target="_blank">
-          <ion-icon name="logo-facebook"></ion-icon>
+        <a href="https://twitter.com/Henriyfxp" target="_blank">
+          <ion-icon name="logo-twitter"></ion-icon>
         </a>
       </div>
 
       <footer>
-        Coach 
-        <a href="https://www.instagram.com/coach_damaris/" target="_blank" >Damaris</a> 🏋️‍♀️
+        Feito pelo
+        <a href="https://www.instagram.com/henrique._vm/" target="_blank" >Henrique</a> 
       </footer>
     </div>
 
