--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="width=device-width, initial-scale=1.
       0"
     />      
-    <title>Studio Fitness</title>
+    <title>DevLinks</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
